gl31-master/src/test/deca/context/valid/complet/if_int_comp.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 20/01/2021
class A{
    int testMeth(){
        return 2;
    }
}
{
    A a;
    if(a.testMeth() > 3){
        print("yes");
    }
}
