gl31-master/src/test/deca/context/invalid/complet/float_return_void.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 12: Erreur, le type renvoyé n'est pas le bon
//
// Historique:
//    cree le 20/01/2021
class Test{

    float methTest(void param1){
        return param1;
    }
}
